--- a/index.html
+++ b/index.html
@@ -8,11 +8,181 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header class="header">
-			
+		<header class="header flex flex--between flex--center">
+			<div class="header__left flex flex--center">
+				<div class="mobile-btn">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+
+				<div class="logo">
+					<img src="img/logo.png" alt="">
+				</div>
+			</div>
+
+			<div class="header__data">
+				<div class="header__phones desctop flex">
+					<a href="tel:+380673211128">+38 (067)321-11-28</a>
+					<a href="tel:+380472501051">+38 (0472)50-10-51</a>
+				</div>
+				<nav class="header-nav flex flex--center">
+					<ul class="menu flex desctop">
+						<li><a href="#">Услуги</a></li>
+						<li><a href="#">Почему мы</a></li>
+						<li><a href="#">Фото</a></li>
+						<li><a href="#">Отзывы</a></li>
+					</ul>
+					<a href="#" class="btn btn--pink">
+						Записаться <span>на тестирование</span>
+					</a>
+				</nav>
+			</div>
+
+			<div class="mobile-menu">
+				<a href="#" class="close"></a>
+				<ul class="menu flex">
+					<li><a href="#">Услуги</a></li>
+					<li><a href="#">Почему мы</a></li>
+					<li><a href="#">Фото</a></li>
+					<li><a href="#">Отзывы</a></li>
+				</ul>
+
+				<div class="header__phones">
+					<a href="tel:+380673211128">+38 (067)321-11-28</a>
+					<a href="tel:+380472501051">+38 (0472)50-10-51</a>
+				</div>
+			</div>
+			<!-- /.mobile-menu -->
 		</header>
 		<main class="main">
-			
+			<section class="top-screen">
+				<div class="container">
+					<div class="top-screen__title">
+						<h1>
+							<span>Become an</span> <span>English</span> <span>Speaker</span> <span>Today!</span>
+						</h1>
+						<p>
+							Школа, в якій об'єднано найсучасніші практики і методики<br> викладання англійської мови та багаторічний досвід талановитих<br> викладачів.
+						</p>
+					</div>
+				</div>
+				<img src="img/top-screen_bg.png" alt="" class="top-screen-img">
+			</section>
+
+			<section class="service">
+				<div class="container">
+					<div class="title">
+						<h2>
+							<span class="title__text">
+								<span class="white">Наші</span>Послуги
+							</span>
+						</h2>
+					</div>
+
+					<ul class="service-list flex flex--wrap">
+						<li>
+							<div class="service__item">
+								<div class="service__img">
+									<img src="img/adults.png" alt="">
+								</div>
+								<div class="service__descr blue">
+									<h3>
+										Дорослі
+									</h3>
+									<p>
+										Курс для дорослих<br>
+										Для початківців та студентів
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="service__item">
+								<div class="service__img">
+									<img src="img/kids.png" alt="">
+								</div>
+								<div class="service__descr yellow">
+									<h3>
+										Діти
+									</h3>
+									<p>
+										Курс для дітлахів дошкільного та <br>
+										шкільного віку<br>
+										навчання дітей від 3 років
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="service__item">
+								<div class="service__img">
+									<img src="img/students.png" alt="">
+								</div>
+								<div class="service__descr pink">
+									<h3>
+										Студенти
+									</h3>
+									<p>
+										Курс для підлітків віком від 14 років <br>
+										та поглибленим вивченням мови.
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="service__item">
+								<div class="service__img">
+									<img src="img/business.png" alt="">
+								</div>
+								<div class="service__descr black">
+									<h3>
+										Бізнес
+									</h3>
+									<p>
+										Курс з нахилом в бізнес тематику <br>
+										і термінологію.<br>
+										Корпоративне навчання
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="service__item">
+								<div class="service__img">
+									<img src="img/exam.png" alt="">
+								</div>
+								<div class="service__descr black">
+									<h3>
+										Екзамени
+									</h3>
+									<p>
+										Підготовка до ЗНО <br>
+										та міжнародних іспитів
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="service__item">
+								<div class="service__img">
+									<img src="img/individual.png" alt="">
+								</div>
+								<div class="service__descr red">
+									<h3>
+										Індивідуальні
+									</h3>
+									<p>
+										Iндивідуальна програма
+									</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+
+					<img src="img/service_bg.png" alt="" class="service-img">
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			
