--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 				</div>
 				<nav class="header-nav flex flex--center">
 					<ul class="menu flex desctop">
-						<li><a href="#">Услуги</a></li>
-						<li><a href="#">Почему мы</a></li>
+						<li><a href="#">Послуги</a></li>
+						<li><a href="#">Чому ми найкращі</a></li>
 						<li><a href="#">Фото</a></li>
-						<li><a href="#">Отзывы</a></li>
+						<li><a href="#">Відгуки</a></li>
 					</ul>
 					<a href="#" class="btn btn--pink">
-						Записаться <span>на тестирование</span>
+						Записатися <span>на тест</span>
 					</a>
 				</nav>
 			</div>
@@ -42,10 +42,10 @@
 			<div class="mobile-menu">
 				<a href="#" class="close"></a>
 				<ul class="menu flex">
-					<li><a href="#">Услуги</a></li>
-					<li><a href="#">Почему мы</a></li>
-					<li><a href="#">Фото</a></li>
-					<li><a href="#">Отзывы</a></li>
+					<li><a href="#">Послуги</a></li>
+						<li><a href="#">Чому ми найкращі</a></li>
+						<li><a href="#">Фото</a></li>
+						<li><a href="#">Відгуки</a></li>
 				</ul>
 
 				<div class="header__phones">
@@ -182,6 +182,98 @@
 
 					<img src="img/service_bg.png" alt="" class="service-img">
 				</div>
+			</section>
+
+			<section class="features">
+				<div class="container">
+					<div class="title title--purple title--right">
+						<h2>
+							<span class="title__text">
+								<span class="white">Причини</span><br>обрати нас
+							</span>
+						</h2>
+					</div>
+
+					<ul class="features__list flex flex--wrap">
+						<li>
+							<div class="features__item features__item--yellow">
+								<div class="features__img">
+									<img src="img/group.png" alt="">
+								</div>
+								<div class="features__content">
+									<h3>
+										ГРУПОВІ <br>ЗАНЯТТЯ
+									</h3>
+									<p>
+										Групи з 4-8 осіб,<br> 
+										тільки живе спілкування <br>
+										англійською
+									</p>
+								</div>
+							</div>
+						</li>
+
+						<li>
+							<div class="features__item features__item--birusa">
+								<div class="features__img">
+									<img src="img/current.png" alt="">
+								</div>
+								<div class="features__content">
+									<h3>
+										СУЧАСНА <br>ПРОГРАМА
+									</h3>
+									<p>
+										Кращі навчальні матеріали для<br> вивчення англійської мови<br> видавництв Cambridge University Press, Oxford University Press, Pearson Longman і National Geographic
+									</p>
+								</div>
+							</div>
+						</li>
+
+						<li>
+							<div class="features__item features__item--black">
+								<div class="features__img">
+									<img src="img/intensive.png" alt="">
+								</div>
+								<div class="features__content">
+									<h3>
+										ІНТЕНСИВНЕ <br>НАВАНТАЖЕННЯ
+									</h3>
+									<p>
+										Ми даємо вам<br> 
+										БАГАТО англійської <br>
+										та вимагаємо того ж від вас
+									</p>
+								</div>
+							</div>
+						</li>
+
+						<li>
+							<div class="features__item features__item--red">
+								<div class="features__img">
+									<img src="img/mirracle.png" alt="">
+								</div>
+								<div class="features__content">
+									<h3>
+										БЕЗ <br>ЧУДЕС
+									</h3>
+									<p>
+										У нас немає чарівної пігулки.<br> Ми створюємо всі умови, щоб ваше вивчення англійської мови було максимально результативним. <br>
+										Далі справа за вами!
+									</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+
+					<div class="btn-container text-center">
+						<a href="#" class="btn btn--pink">
+							Записатися <span>на тест</span>
+						</a>
+					</div>
+
+				</div>
+				<img src="img/features_bg.png" alt="" class="features-shape">
+				<img src="img/mark-full.png" alt="" class="mark">
 			</section>
 		</main>
 		<footer class="footer">
