--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 				</div>
 				<nav class="header-nav flex flex--center">
 					<ul class="menu flex desctop">
-						<li><a href="#">Послуги</a></li>
-						<li><a href="#">Чому ми найкращі</a></li>
-						<li><a href="#">Фото</a></li>
-						<li><a href="#">Відгуки</a></li>
+						<li><a href="#service">Послуги</a></li>
+						<li><a href="#fearures">Чому ми найкращі</a></li>
+						<li><a href="#photo">Фото</a></li>
+						<li><a href="#reviews">Відгуки</a></li>
 					</ul>
-					<a href="#" class="btn btn--pink">
+					<a href="#form" class="btn btn--pink test">
 						Записатися <span>на тест</span>
 					</a>
 				</nav>
@@ -42,10 +42,10 @@
 			<div class="mobile-menu">
 				<a href="#" class="close"></a>
 				<ul class="menu flex">
-					<li><a href="#">Послуги</a></li>
-						<li><a href="#">Чому ми найкращі</a></li>
-						<li><a href="#">Фото</a></li>
-						<li><a href="#">Відгуки</a></li>
+					<li><a href="#service">Послуги</a></li>
+					<li><a href="#fearures">Чому ми найкращі</a></li>
+					<li><a href="#photo">Фото</a></li>
+					<li><a href="#reviews">Відгуки</a></li>
 				</ul>
 
 				<div class="header__phones">
@@ -70,7 +70,7 @@
 				<img src="img/top-screen_bg.png" alt="" class="top-screen-img">
 			</section>
 
-			<section class="service">
+			<section class="service" id="service">
 				<div class="container">
 					<div class="title">
 						<h2>
@@ -184,7 +184,7 @@
 				</div>
 			</section>
 
-			<section class="features">
+			<section class="features" id="fearures">
 				<div class="container">
 					<div class="title title--purple title--right">
 						<h2>
@@ -266,7 +266,7 @@
 					</ul>
 
 					<div class="btn-container text-center">
-						<a href="#" class="btn btn--pink">
+						<a href="#form" class="btn btn--pink test">
 							Записатися <span>на тест</span>
 						</a>
 					</div>
@@ -275,15 +275,335 @@
 				<img src="img/features_bg.png" alt="" class="features-shape">
 				<img src="img/mark-full.png" alt="" class="mark">
 			</section>
+
+			<section class="photos" id="photo">
+				<div class="container">
+					<div class="photos__title">
+						 @english_school_best
+					</div>
+
+				</div>
+				<div class="photos__row">
+					<div class="photos__item">
+						<img src="img/photos/photo-1.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-2.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-3.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-4.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-5.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-6.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-7.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-8.jpg" alt="">
+					</div>
+				</div>
+				<div class="photos__row--reverse" dir="rtl">
+					<div class="photos__item">
+						<img src="img/photos/photo-1.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-2.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-3.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-4.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-5.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-6.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-7.jpg" alt="">
+					</div>
+					<div class="photos__item">
+						<img src="img/photos/photo-8.jpg" alt="">
+					</div>
+				</div>
+			</section>
+
+			<section class="reviews" id="reviews">
+				<div class="container">
+					<div class="title">
+						<h2>
+							<span class="title__text">
+								<span class="white">Наші</span>студенти
+							</span>
+						</h2>
+					</div>
+				</div>
+				<div class="reviews-container">
+					<div class="reviews-slider">
+						<div class="reviews-slider__item">
+							<div class="reviews-slider__content flex">
+								<div class="reviews-slider__descr">
+									<div class="reviews-slider__text">
+										<p>
+											Привіт! Дуже хочу поділитися своїми враженнями про школу "BESТ" ! Займаюсь вже майже рік і відчуваю себе впевнено, за кордоном та в повсякденному житті, користуючись мовою. Тому що на кожному занятті ти поринаєш в англомовне середовище. 
+										</p>
+										<p>
+											Спілкуєшся, читаєш, виконуєш різні завдання,які до того ж є дуже сучасні і цікаві для загального розвитку. Атмосфера дружня і невимушена, тому хочеться повертатись, та дізнаватись все більше! Окремо хочу завдячити викладачам, які дуже толерантно допомагають навчатись і створюють позитивний настрій! Обов'язково спробуйте,впевнена вам сподобається)
+										</p>
+									</div>
+									<div class="author-name">
+										Алевтина Жуковская
+									</div>
+									<ul class="social">
+										<li>
+											<a href="#">
+												<img src="img/icons/fb.svg" alt="">
+											</a>
+										</li>
+										<li><a href="#"><img src="img/icons/tw.svg" alt=""></a></li>
+										<li><a href="#"><img src="img/icons/youtube.svg" alt=""></a></li>
+										<li><a href="#"><img src="img/icons/inst.svg" alt=""></a></li>
+										<li><a href="#"><img src="img/icons/in.svg" alt=""></a></li>
+									</ul>
+								</div>
+								<div class="reviews-slider__avatar">
+									<img src="img/avatar.jpg" alt="">
+								</div>
+							</div>
+						</div>
+
+						<div class="reviews-slider__item">
+							<div class="reviews-slider__content flex">
+								<div class="reviews-slider__descr">
+									<div class="reviews-slider__text">
+										<p>
+											Привіт! Дуже хочу поділитися своїми враженнями про школу "BESТ" ! Займаюсь вже майже рік і відчуваю себе впевнено, за кордоном та в повсякденному житті, користуючись мовою. Тому що на кожному занятті ти поринаєш в англомовне середовище. 
+										</p>
+										
+									</div>
+									<div class="author-name">
+										Алевтина Жуковская
+									</div>
+									<ul class="social">
+										<li>
+											<a href="#">
+												<img src="img/icons/fb.svg" alt="">
+											</a>
+										</li>
+										<li><a href="#"><img src="img/icons/tw.svg" alt=""></a></li>
+										<li><a href="#"><img src="img/icons/youtube.svg" alt=""></a></li>
+										<li><a href="#"><img src="img/icons/inst.svg" alt=""></a></li>
+										<li><a href="#"><img src="img/icons/in.svg" alt=""></a></li>
+									</ul>
+								</div>
+								<div class="reviews-slider__avatar">
+									<img src="img/avatar.jpg" alt="">
+								</div>
+							</div>
+
+						</div>
+					</div>
+					<div class="container">
+						<div class="btn-container">
+							<a href="#form" class="btn btn--pink test">
+								Записатися <span>на тест</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="form" id="form">
+				<div class="container">
+					<div class="form__body flex flex--between">
+						<div class="form__left">
+							<div class="form__left__title">
+								<span>Записаться на</span><br> бесплатное <br>тестирование
+							</div>
+							<div class="form__left__descr">
+								Программа обучения английскому языку,
+								которая создана на базе знаний, полученных в лучших британских школах, и усовершенствована десятилетним преподавательским опытом.
+							</div>
+						</div>
+						<div class="form__right">
+							<form action="#">
+								<div class="input-wrapper">
+									<span class="input input--nariko">
+										<input class="input__field input__field--nariko " type="text" id="input-1" placeholder="">
+										<label class="input__label input__label--nariko" for="input-1">
+											<span class="input__label-content input__label-content--nariko">Как Вас зовут?</span>
+										</label>
+									</span>
+								</div>
+								<div class="input-wrapper">
+									<span class="input input--nariko">
+										<input class="input__field input__field--nariko " type="text" id="input-2" placeholder="">
+										<label class="input__label input__label--nariko" for="input-2">
+											<span class="input__label-content input__label-content--nariko">Ваш E-mail</span>
+										</label>
+									</span>
+								</div>
+								<div class="input-wrapper">
+									<span class="input input--nariko">
+										<input class="input__field input__field--nariko " type="text" id="phone" placeholder="">
+										<label class="input__label input__label--nariko" for="phone">
+											<span class="input__label-content input__label-content--nariko">Ваш номер телефона</span>
+										</label>
+									</span>
+								</div>
+								<div class="input-wrapper">
+									<textarea class="textarea" placeholder="Расскажите о себе"></textarea>
+								</div>
+
+								<div class="submit-container">
+									<input type="submit" value="Отправить" class="btn btn--pink">
+								</div>
+								<!-- <img src="img/mark-2.png" alt="" class="form-mark-img"> -->
+							</form>
+							
+						</div>
+					</div>
+				</div>
+				<img src="img/form-bg.png" alt="" class="form-img">
+			</section>
+
+			<section class="clients">
+				<div class="container">
+					<div class="clients__title">
+						Наши клиенты
+					</div>
+					<ul class="clients__list flex flex--wrap">
+						<li>
+							<img src="img/clients/client-1.jpg" alt="">
+						</li>
+						<li><img src="img/clients/client-2.jpg" alt=""></li>
+						<li><img src="img/clients/client-3.png" alt=""></li>
+						<li><img src="img/clients/client-4.png" alt=""></li>
+						<li><img src="img/clients/client-5.png" alt=""></li>
+						<li><img src="img/clients/client-6.jpg" alt=""></li>
+					</ul>
+				</div>
+				<img src="img/client-bg.jpg" alt="" class="client-bg">
+			</section>
+			
 		</main>
 		<footer class="footer">
-			
+			<div class="container flex flex--between">
+				<div class="footer__logo">
+					<div class="logo">
+						<img src="img/logo.png" alt="">
+					</div>
+					<div class="copyright">
+						English-school.ck.ua © 2019<br>
+						Все права защищены.
+					</div>
+				</div>
+				<div class="footer__content">
+					<div class="footer__row flex flex--between flex--center">
+						<div class="footer__row__left">
+							<div class="footer_title">
+								Become an English Speaker Today!
+							</div>
+							<div class="footer__subtitle">
+								Выбрав нашу школу, Вы можете быть уверены в индивидуальном подходе и действительно углубленном изучении английского языка.
+							</div>
+						</div>
+						<div class="footer__row__right">
+							<a href="#" class="callback">
+								Заказать звонок
+							</a>
+						</div>
+					</div>
+
+					<div class="footer__row flex flex--between flex--center">
+						<div class="footer__row__left">
+							<address class="address">
+								<span>
+									Наш адрес
+								</span>
+								Украина г. Черкассы, улица Симоненко 5, офис № 304
+							</address>
+						</div>
+						<div class="footer__row__right">
+							<ul class="social">
+								<li>
+									<a href="#" tabindex="0">
+										<img src="img/icons/fb.svg" alt="">
+									</a>
+								</li>
+								<li><a href="#" tabindex="0"><img src="img/icons/tw.svg" alt=""></a></li>
+								<li><a href="#" tabindex="0"><img src="img/icons/youtube.svg" alt=""></a></li>
+								<li><a href="#" tabindex="0"><img src="img/icons/inst.svg" alt=""></a></li>
+								<li><a href="#" tabindex="0"><img src="img/icons/in.svg" alt=""></a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="footer__row flex flex--between flex--center">
+						<div class="footer__row__left">
+							<div class="footer__contact flex flex--center">
+								<div class="footer__phone">
+									<a href="tel:+380673211128">+38 (067)321-11-28</a>
+									<a href="tel:+380472501051">+38 (0472)50-10-51</a>
+								</div>
+								<div class="footer__phone">
+									<span>Работаем ПН-СБ с 9:00 до 19:00</span>
+									<a href="mailto:englishschool170@gmail.com">englishschool170@gmail.com</a>
+								</div>
+							</div>
+						</div>
+						<div class="footer__row__right">
+							<a href="https://creafresh.com/" class="webmaster">
+								<img src="img/webmaster.svg" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div id="overlay"></div>
+			<div class="popup">
+				<a href="#" class="popup-close"></a>
+				<div class="popup__content">
+					<div class="popup__top flex flex--center">
+						<img src="img/kids.png" alt="" class="popup-img">
+						<div class="popup__top__title">
+							<div class="popup__top__title__name">KIDS</div>
+							<div class="popup__top__title__descr">
+								Курс для дітлахів дошкільного та 
+								шкільного віку
+								навчання дітей від 3 років
+							</div>
+						</div>
+					</div>
+					<div class="popup__text">
+						<p>
+							Мы створюємо умови, в яких діти відпрацьовують лексичні конструкції в контексті мовленнєвих ситуацій. Переважають ігрові і пізнавальні підходи до навчання. Заняття проводяться по всесвітньо визнаним підручникам разом з чудовими ігровими матеріалами.
+						</p>
+						<p>
+							Заняття проходять двічи на тиждень. Тривалість: дошкільнята і молодша школа - 60 хв
+						</p>
+					</div>
+					<div class="popup__btn">
+						<a href="#form" class="btn btn--pink test">Записатися на тест</a>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div><!-- end wrapper -->
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/common.js"></script>
 </body>
 </html>
