убрал кнопку в попапе

--- a/index.html
+++ b/index.html
@@ -517,6 +517,11 @@
 								Выбрав нашу школу, Вы можете быть уверены в индивидуальном подходе и действительно углубленном изучении английского языка.
 							</div>
 						</div>
+						<div class="footer__row__right">
+							<a href="#" class="callback">
+								Заказать звонок
+							</a>
+						</div>
 					</div>
 
 					<div class="footer__row flex flex--between flex--center">
@@ -587,9 +592,6 @@
 						<p>
 							Заняття проходять двічи на тиждень. Тривалість: дошкільнята і молодша школа - 60 хв
 						</p>
-					</div>
-					<div class="popup__btn">
-						<a href="#form" class="btn btn--pink test">Записатися на тест</a>
 					</div>
 				</div>
 			</div>
